--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -180,6 +180,8 @@ StaticMeshActor.Actor=True
 Actor.TransformCommon=True
 Actor.Networking=True
 WorldDataLayers.Networking=True
+HLODLayer.HLOD=True
+HLODLayer.Rendering=True
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1262,4 +1264,11 @@ AssetDialog.CurrentViewType=1
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
+HLODLayer="\"Object\" "
+
+[ContentBrowserRecent]
+MRUItem0=/Game/OpenWorldOmg_HLOD0_Instancing
+
+[AssetEditorToolkitTabLocation]
+/Game/OpenWorldOmg_HLOD0_Instancing.OpenWorldOmg_HLOD0_Instancing=1
 
