--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -182,6 +182,21 @@ Actor.Networking=True
 WorldDataLayers.Networking=True
 HLODLayer.HLOD=True
 HLODLayer.Rendering=True
+TextRenderActor.TransformCommon=True
+TextRenderActor.Materials=True
+TextRenderActor.Text=True
+TextRenderActor.Rendering=True
+TextRenderActor.Lighting=True
+TextRenderActor.HLOD=True
+TextRenderActor.Navigation=True
+TextRenderActor.Tags=True
+TextRenderActor.Cooking=True
+TextRenderActor.Replication=True
+TextRenderActor.Physics=True
+TextRenderActor.Networking=True
+TextRenderActor.WorldPartition=True
+TextRenderActor.Input=True
+TextRenderActor.Actor=True
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1265,6 +1280,10 @@ WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 HLODLayer="\"Object\" "
+Actor="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/OpenWorldOmg_HLOD0_Instancing
