--- a/UnrealTestGit/.gitignore
+++ b/UnrealTestGit/.gitignore
@@ -72,3 +72,5 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+D:\Repos\UnrealTestRepo\UnrealTestGit\Saved\*
+D:\Repos\UnrealTestRepo\UnrealTestGit\Intermediate\*
