--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,11 +98,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/OpenWorldOmg
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/NewBlueprint.NewBlueprint
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -343,7 +342,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()),("/Game/OpenWorldOmg.OpenWorldOmg", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1)))))
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=156.000
+ScreenPosition=X=632.000 Y=1.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=False
 
@@ -1365,14 +1364,16 @@ UnsavedAssetsTracker.TimeStamp=2024.01.23-15.48.18
 UnsavedAssetsTracker.LastCompileMethod=External
 HierarchicalLODOutliner.TimeStamp=2024.01.23-15.48.16
 HierarchicalLODOutliner.LastCompileMethod=External
-Voice.TimeStamp=2023.04.17-10.10.07
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2023.04.17-10.10.04
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2024.01.23-15.48.18
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2024.01.23-15.48.16
+MovieSceneCapture.LastCompileMethod=External
 NullDrv.TimeStamp=2023.04.17-10.10.04
 NullDrv.LastCompileMethod=Unknown
 HierarchicalLODUtilities.TimeStamp=2024.01.23-15.48.16
 HierarchicalLODUtilities.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2024.01.23-15.48.14
+BlueprintGraph.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1447,8 +1448,8 @@ Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/NewBlueprint
-MRUItem1=/Game/OpenWorldOmg
+MRUItem0=/Game/OpenWorldOmg
+MRUItem1=/Game/Blueprints/NewBlueprint
 MRUItem2=/Engine/BasicShapes/BasicShapeMaterial
 MRUItem3=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem4=/Game/OpenWorldOmg_HLOD0_Instancing
