--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,7 +101,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/OpenWorldOmg
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -377,6 +377,12 @@ VolumetricCloud.Cooking=True
 VolumetricCloud.Replication=True
 VolumetricCloud.Networking=True
 VolumetricCloud.Actor=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.WorldPartition=True
+Actor.Actor=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -1421,8 +1427,8 @@ Voice.TimeStamp=2024.01.23-15.48.18
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2024.01.23-15.48.16
 MovieSceneCapture.LastCompileMethod=External
-NullDrv.TimeStamp=2023.04.17-10.10.04
-NullDrv.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2024.01.23-15.48.16
+NullDrv.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2024.01.23-15.48.16
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2024.01.23-15.48.14
@@ -1514,7 +1520,7 @@ MRUItem4=/Game/OpenWorldOmg_HLOD0_Instancing
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
