--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -384,6 +384,22 @@ Actor.HLOD=True
 Actor.WorldPartition=True
 Actor.Actor=True
 MapBuildDataRegistry.Lighting=True
+PostProcessVolume.TransformCommon=True
+PostProcessVolume.BrushSettings=True
+PostProcessVolume.Lens=True
+PostProcessVolume.Color Grading=True
+PostProcessVolume.Film=True
+PostProcessVolume.Global Illumination=True
+PostProcessVolume.Reflections=True
+PostProcessVolume.Rendering Features=True
+PostProcessVolume.Film Grain=True
+PostProcessVolume.PostProcessVolumeSettings=True
+PostProcessVolume.Replication=True
+PostProcessVolume.HLOD=True
+PostProcessVolume.Networking=True
+PostProcessVolume.WorldPartition=True
+PostProcessVolume.Actor=True
+Actor.Physics=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -1507,6 +1523,10 @@ ShapeComponent="\"Object\" "
 Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 MapBuildDataRegistry="\"Object\" "
+PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+BrushComponent="\"Object\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/OpenWorldOmg
