--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,7 +101,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/OpenWorldOmg
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -1482,7 +1482,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetDialog.ThumbnailSize=2
 AssetDialog.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Characters
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1543,7 +1543,7 @@ MRUItem4=/Game/OpenWorldOmg_HLOD0_Instancing
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
