--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,5 @@ Plugins/*/Intermediate/*
 DerivedDataCache/*
 D:\Repos\UnrealTestRepo\UnrealTestGit\Saved\*
 D:\Repos\UnrealTestRepo\UnrealTestGit\Intermediate\*
+
+UnrealTestGit/ArchivedBuilds/
