--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,10 +98,10 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/OpenWorldOmg
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -159,6 +159,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/NewBlueprint.NewBlueprint;
+RecentlyPlaced=/Game/Blueprints/NewBlueprint_2.NewBlueprint_2;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Sphere.Sphere;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
@@ -410,6 +411,18 @@ PlayerStart.Networking=True
 PlayerStart.WorldPartition=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
+NewBlueprint_2_C.Tick=True
+NewBlueprint_2_C.Replication=True
+NewBlueprint_2_C.Rendering=True
+NewBlueprint_2_C.Collision=True
+NewBlueprint_2_C.Actor=True
+NewBlueprint_2_C.Input=True
+NewBlueprint_2_C.HLOD=True
+NewBlueprint_2_C.Physics=True
+NewBlueprint_2_C.WorldPartition=True
+NewBlueprint_2_C.Events=True
+NewBlueprint_2_C.TransformCommon=True
+NewBlueprint_2_C.Networking=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
@@ -1466,8 +1479,9 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/OpenWorldOmg
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/MapTest
+MRUItem2=/Game/OpenWorldOmg
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1540,21 +1554,23 @@ BrushComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OpenWorldOmg
-MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem2=/Game/Blueprints/NewBlueprint
-MRUItem3=/Engine/BasicShapes/BasicShapeMaterial
-MRUItem4=/Game/OpenWorldOmg_HLOD0_Instancing
+MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
+MRUItem1=/Game/Blueprints/NewBlueprint_2
+MRUItem2=/Game/OpenWorldOmg
+MRUItem3=/Game/Blueprints/NewBlueprint
+MRUItem4=/Engine/BasicShapes/BasicShapeMaterial
+MRUItem5=/Game/OpenWorldOmg_HLOD0_Instancing
 
 [AssetEditorToolkitTabLocation]
 /Game/OpenWorldOmg_HLOD0_Instancing.OpenWorldOmg_HLOD0_Instancing=1
 /Engine/BasicShapes/BasicShapeMaterial.BasicShapeMaterial=1
 /Game/Blueprints/NewBlueprint.NewBlueprint=1
 /Game/ThirdPerson/Maps/ThirdPersonMap_BuiltData.ThirdPersonMap_BuiltData=1
+/Game/Blueprints/NewBlueprint_2.NewBlueprint_2=1
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
