--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/MapTest
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -424,9 +424,10 @@ NewBlueprint_2_C.Events=True
 NewBlueprint_2_C.TransformCommon=True
 NewBlueprint_2_C.Networking=True
 WorldSettings.HLODSystem=True
+Actor.Input=True
 
 [SelectionDetails]
-PreserveScaleRatio=False
+PreserveScaleRatio=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1480,8 +1481,8 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/MapTest
+MRUItem0=/Game/MapTest
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem2=/Game/OpenWorldOmg
 
 [ContentBrowser]
@@ -1555,8 +1556,8 @@ BrushComponent="\"Object\" "
 CapsuleComponent="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
-MRUItem1=/Game/MapTest
+MRUItem0=/Game/MapTest
+MRUItem1=/Game/ThirdPerson/Maps/ThirdPersonMap
 MRUItem2=/Game/OpenWorldOmg
 MRUItem3=/Game/Blueprints/NewBlueprint_2
 MRUItem4=/Game/Blueprints/NewBlueprint
