--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -101,7 +101,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -445,7 +445,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 [RootWindow]
 ScreenPosition=X=539.000 Y=42.000
 WindowSize=X=1280.000 Y=816.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1577,7 +1577,7 @@ MRUItem6=/Game/OpenWorldOmg_HLOD0_Instancing
 
 [DetailCustomWidgetExpansion]
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash,
-WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash,
+WorldPartitionRuntimeSpatialHash=
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
