--- a/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/UnrealTestGit/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -98,7 +98,7 @@ DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
 [EditorStartup]
-LastLevel=/Game/ThirdPersonMap
+LastLevel=/Game/MapTest
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -526,7 +526,7 @@ bHideLevelInstanceContent=True
 bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
-PerWorldEditorSettings=(("/Game/ThirdPersonMap.ThirdPersonMap", ()),("/Game/OpenWorldOmg.OpenWorldOmg", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1)))),("/Game/ThirdPersonMap.ThirdPersonMap", ()),("/Game/OpenWorldTest.OpenWorldTest", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1)))))
+PerWorldEditorSettings=(("/Game/ThirdPersonMap.ThirdPersonMap", ()),("/Game/OpenWorldOmg.OpenWorldOmg", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1)))),("/Game/OpenWorldTest.OpenWorldTest", (LoadedEditorRegions=((Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1),(Min=(X=-102480.867188,Y=-102536.195312,Z=-2097152.000000),Max=(X=102491.187500,Y=102276.851562,Z=2097152.000000),IsValid=1)))))
 
 [RootWindow]
 ScreenPosition=X=539.000 Y=42.000
@@ -1571,9 +1571,9 @@ LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.1/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MRU]
-MRUItem0=/Game/ThirdPersonMap
+MRUItem0=/Game/MapTest
 MRUItem1=/Game/OpenWorldTest
-MRUItem2=/Game/MapTest
+MRUItem2=/Game/ThirdPersonMap
 MRUItem3=/Game/OpenWorldOmg
 MRUItem4=/Game/ThirdPerson/Maps/ThirdPersonMap
 
@@ -1654,9 +1654,9 @@ SkinnedMeshComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPersonMap
+MRUItem0=/Game/MapTest
 MRUItem1=/Game/OpenWorldTest
-MRUItem2=/Game/MapTest
+MRUItem2=/Game/ThirdPersonMap
 MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem4=/Engine/EngineFonts/RobotoDistanceField
 MRUItem5=/Game/NewBlueprint_2
